First iteration exception handling in backend
RISDEV-4024